<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="th.ac.cmu.camt.sodiumconqueror.activity.HealInfomationActivity">


    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <EditText
                android:id="@+id/EditTextName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="24dp"
                android:hint="@string/name"
                android:imeOptions="actionNext"
                android:singleLine="true"
                android:textSize="16dp" />

            <EditText

                android:id="@+id/EditTextAge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/EditTextName"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="16dp"
                android:hint="@string/age"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:singleLine="true" />

            <th.ac.cmu.camt.sodiumconqueror.utils.NoDefaultSpinner
                android:layout_marginRight="16dp"
                android:id="@+id/Spinner_Gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/EditTextAge"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="27dp"/>

            <EditText

                android:id="@+id/EditTextWeight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/Spinner_Gender"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="16dp"
                android:hint="@string/weight_kg"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:singleLine="true" />

            <EditText

                android:id="@+id/EditTextHeight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/EditTextWeight"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="16dp"
                android:hint="@string/height_cm"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:singleLine="true" />

            <EditText
                android:id="@+id/EditTextDisease"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/EditTextHeight"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="16dp"
                android:hint="@string/disease_identification"
                android:maxLines="5"

                />




            <Button
                android:id="@+id/btn_submit_heal_info"
                android:layout_width="240dp"
                android:layout_height="50dp"
                android:layout_below="@+id/EditTextDisease"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="24dp"
                android:background="@drawable/seletor_orange"
                android:elevation="2dp"
                android:text="@string/submit"
                android:textColor="@android:color/white"
                android:textSize="16dp" />



        </RelativeLayout>


    </ScrollView>

</LinearLayout>
