<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            app:elevation="2dp"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />

        <th.ac.cmu.camt.sodiumconqueror.utils.SlidingTabLayout
            android:id="@+id/tab"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="#FFFFFFFF"
            android:elevation="2dp" />

        <android.support.v4.view.ViewPager
            android:id="@+id/pager"

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"></android.support.v4.view.ViewPager>

    </LinearLayout>

    <!-- Drawer item -->

    <RelativeLayout
        android:clickable="true"
        android:layout_width="@dimen/drawer_size"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@android:color/white"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/drawerImg"
            android:layout_width="match_parent"
            android:layout_height="172dp"
            android:scaleType="centerCrop"
            android:src="@drawable/drawer_top" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="172dp"
            android:scaleType="centerCrop"
            android:src="@drawable/filter" />


        <de.hdodenhof.circleimageview.CircleImageView

            android:clickable="true"
            android:id="@+id/profile_image"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="80dp"
            android:src="@drawable/profile"
            app:civ_border_color="#FFFFFF"
            app:civ_border_width="1dp" />



        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="90dp"
            android:layout_toRightOf="@+id/profile_image"
            android:padding="16dp">


            <TextView
                android:ellipsize="end"
                android:maxLines="1"
                android:id="@+id/drawe_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginLeft="16sp"
                android:freezesText="true"
                android:text="Username"
                android:textColor="@android:color/white" />


        </RelativeLayout>


        <!-- BUTTON -->

        <RelativeLayout
            android:layout_below="@+id/drawerImg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        <!-- BTN ROW1 -->
        <RelativeLayout
            android:background="@drawable/selector_food"
            android:id="@+id/row1"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:clickable="true">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:scaleType="centerInside"
                android:src="@drawable/healthiinformation" />

            <TextView
                android:textColor="@android:color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="72dp"
                android:layout_marginTop="18dp"
                android:text="@string/health_information"
                android:textSize="14sp" />


        </RelativeLayout>

        <!-- BTN ROW2 -->
        <RelativeLayout
            android:background="@drawable/selector_food"
            android:id="@+id/row2"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_below="@+id/row1"
            android:clickable="true">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:scaleType="centerInside"
                android:src="@drawable/basicinfo" />

            <TextView
                android:textColor="@android:color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="72dp"
                android:layout_marginTop="18dp"
                android:text="@string/basic_information"
                android:textSize="14sp" />


        </RelativeLayout>

        <!-- BTN ROW3 -->
        <RelativeLayout
            android:background="@drawable/selector_food"
            android:id="@+id/row3"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_below="@+id/row2"
            android:clickable="true">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:scaleType="centerInside"
                android:src="@drawable/tutorial" />

            <TextView
                android:textColor="@android:color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="72dp"
                android:layout_marginTop="18dp"
                android:text="@string/tutorial"
                android:textSize="14sp" />


        </RelativeLayout>


        <!-- BTN ROW5 -->
        <RelativeLayout
            android:background="@drawable/selector_food"
            android:id="@+id/row5"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_below="@+id/row3"
            android:clickable="true">

            <ImageView
                android:textColor="@android:color/black"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:scaleType="centerInside"
                android:src="@drawable/about" />

            <TextView
                android:textColor="@android:color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="72dp"
                android:layout_marginTop="18dp"
                android:text="@string/about"
                android:textSize="14sp" />


        </RelativeLayout>

        <!-- BTN ROW6 -->
        <RelativeLayout
            android:background="@drawable/selector_food"
            android:id="@+id/row6"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_below="@+id/row5"
            android:clickable="true">

            <ImageView
                android:textColor="@android:color/black"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:scaleType="centerInside"
                android:src="@drawable/ssetting" />

            <TextView
                android:textColor="@android:color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="72dp"
                android:layout_marginTop="18dp"
                android:text="@string/setting"
                android:textSize="14sp" />

            </RelativeLayout>



        </RelativeLayout>


    </RelativeLayout>


</android.support.v4.widget.DrawerLayout>
